--- a/src/styles/Store.module.css
+++ b/src/styles/Store.module.css
@@ -21,7 +21,13 @@
 
 @media  screen and (max-width: 750px) {
   .storeContent {
-    padding: 0.2rem;
+    padding: 0;
+  }
+  .storeContent p{
+    margin: 0;
+  }
+  .storeContent h1{
+    margin: 0;
   }
   .navcontainer{
     width: 100%;
@@ -29,10 +35,10 @@
     overflow: auto;
   }
   .toggleNav{
-    width: 40px;
-    height: 40px;
+    width: 50px;
+    height: 50px;
     position: fixed;
-    top: 80%;
+    top: 85%;
     display: block;
     color: black;
     margin-left: 0.5rem;
@@ -40,12 +46,16 @@
     font-size: larger;
     z-index: 1000;
     border: none;
-    display: block;
-    text-align: center;
+    left: 2rem;
+    display: flex;
+    justify-content: center;
   }
   .gamesContainer{
     width: 100%;
     height: fit-content;
+  }
+  .hamburger{
+    align-self: center;
   }
 
 }
